Fix data view overflow.

--- a/datawire/static/css/main.scss
+++ b/datawire/static/css/main.scss
@@ -358,6 +358,10 @@ footer {
         float: right;
     }
 
+    .tablewrapper {
+        overflow-x: scroll;
+    }
+
     p.frame-body {
         strong {
             color: $linkColor;
